2001-11-19  Toon Moene <toon@moene.indiv.nluug.nl>
	* .cvsignore: Ignore g77.1
	* g77.texi: Substitute `@command' for `@code'
	where appropriate.
	* invoke.texi: Ditto.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47188 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,10 @@
+2001-11-19  Toon Moene <toon@moene.indiv.nluug.nl>
+
+	* .cvsignore: Ignore g77.1
+	* g77.texi: Substitute `@command' for `@code'
+	where appropriate.
+	* invoke.texi: Ditto.
+
 2001-11-18  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* Make-lang.in: Remove all references to LANGUAGES
