* mkconfig.sh: Undefine ENABLE_NLS if GENERATOR_FILE is 	defined (prevents link errors when gettext isn't in the system 	library).
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47189 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-19  Zack Weinberg  <zack@codesourcery.com>
+
+	* mkconfig.sh: Undefine ENABLE_NLS if GENERATOR_FILE is
+	defined (prevents link errors when gettext isn't in the system
+	library).
+
 2001-11-19  DJ Delorie  <dj@redhat.com>
 
 	* read-rtl.c (ISDIGIT, ISSPACE): Make sure we have these.
