--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-19  Aldy Hernandez  <aldyh@redhat.com>
+
+        * gcc.dg/altivec-1.c: New.
+
 2001-11-19  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* gcc.dg/cpp/fpreprocessed.c: New test case.
