--- a/gcc/config/1750a/1750a.md
+++ b/gcc/config/1750a/1750a.md
@@ -809,7 +809,7 @@
 (define_insn ""
   [(set (match_operand:QI 0 "register_operand" "=r")
         (ior:QI  (match_operand:QI 1 "register_operand" "0")
-                 (lshiftrt:QI (const_int 0x8000)
+                 (lshiftrt:QI (const_int 32768)
                       (match_operand:QI 2 "register_operand" "r"))))]
   ""
   "svbr   r%2,%r0")
@@ -818,7 +818,7 @@
 (define_insn ""
   [(set (match_operand:QI 0 "general_operand" "=r")
         (and:QI  (match_operand:QI 1 "general_operand" "0")
-            (not:QI (lshiftrt:QI (const_int 0x8000)
+            (not:QI (lshiftrt:QI (const_int 32768)
                         (match_operand:QI 2 "register_operand" "r")))))]
   ""
   "rvbr   r%2,%r0")
