* Make-lang.in: Complete ``Build g77.1 in $(srcdir)''.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47198 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-19  Loren J. Rittle  <ljrittle@acm.org>
+
+	* Make-lang.in: Complete ``Build g77.1 in $(srcdir)''.
+
 2001-11-19  Geoffrey Keating  <geoffk@redhat.com>
 
 	* g77spec.c (lang_specific_driver) [ENABLE_SHARED_LIBGCC]: Add
