* config.gcc (*-*-freebsd*): Remove configuration block.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47205 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-20  Loren J. Rittle  <ljrittle@acm.org>
+
+	* config.gcc (*-*-freebsd*): Remove configuration block.
+
 2001-11-19  Loren J. Rittle  <ljrittle@acm.org>
 
 	bootstrap/4422
